--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+#Mine
+Private/*
+.idea/*
+*_test.py
+*.pkl
+*.txt
+*.csv
+*.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
